overflow fixed I hope

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,12 +41,13 @@ h6 {
 }
 
 .tm-logo {
-  width: 12vw;
+  width: 16vw;
   display: inline;
 }
 
 .tm-title {
-  font-size: 5.3vw;
+  font-size: 8vw;
+  line-height: 8vw;
   font-family: "Jacques Francois Shadow", serif;
   color: #91ba9a;
   display: inline;
@@ -56,11 +57,12 @@ h6 {
 .tm-subtitle {
   color: #0095bf;
   font-size: 2.8vw;
-  margin-bottom: 10px;
+  line-height: 2.8vw;
+  margin-bottom: 2px;
   text-align: left;
 }
 .tm-social-media {
-  padding-top: 50vh;
+  padding-top: 25vh;
   text-align: right;
 }
 
@@ -69,12 +71,12 @@ h6 {
 }
 
 .tm-social-media img {
-  height: 100px;
+  height: 80px;
   padding: 0px 20px;
 }
 
 .tm-section-1 {
-  height: 70vh;
+  height: 40vh;
   background-image: url(../img/spot-bg-01.jpg);
   background-size: cover;
   -webkit-clip-path: polygon(0px 0px, 100% 0px, 100% 84%, 0px 100%);
@@ -222,18 +224,18 @@ a.btn:hover {
   .container {
     max-width: none;
   }
-
-  /* .tm-title {
-    font-size: 6vw;
-  } */
-
-  /* .tm-subtitle {
-    font-size: 3vw;
-  } */
 }
 @media (min-width: 768px) {
   .container {
     max-width: 720px;
+  }
+
+  .tm-social-media {
+    padding-top: 400px;
+  }
+
+  .tm-section-1 {
+    height: 600px;
   }
 }
 
@@ -243,7 +245,8 @@ a.btn:hover {
   }
 
   .tm-title {
-    font-size: 3.5rem;
+    font-size: 5rem;
+    line-height: 5rem;
     font-family: "Jacques Francois Shadow", serif;
     color: #91ba9a;
     display: inline;
@@ -252,19 +255,20 @@ a.btn:hover {
 
   .tm-subtitle {
     color: #0095bf;
-    font-size: 1.9rem;
-    margin-bottom: 10px;
+    font-size: 2rem;
+    margin-bottom: 5px;
     text-align: left;
   }
 
   .tm-logo {
-    width: 140px;
+    width: 160px;
     margin-right: 20px;
   }
 }
 
 @media (min-width: 1200px) {
-  .container {
+  .container,
+  .container-fluid {
     max-width: 1050px;
   }
 }
@@ -308,12 +312,6 @@ a.btn:hover {
 
   img {
     max-width: 100%;
-  }
-
-  .tm-section-1 {
-    padding-bottom: 90px;
-    -webkit-clip-path: polygon(0px 0px, 100% 0px, 100% 92%, 0px 100%);
-    clip-path: polygon(0px 0px, 100% 0px, 100% 92%, 0px 100%);
   }
 
   .tm-section-3 {
